[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/icon/checkbox_check.png" type="Texture" id=3]
[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/main-menu/ui/setting/setting.gd" type="Script" id=5]

[node name="setting" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -300.0
margin_right = 240.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 600 )
script = ExtResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.917647 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 600 )

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 480.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 34.0
margin_right = 480.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 1 )
text = "Setting"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 98.0
margin_right = 480.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 30 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 132.0
margin_right = 480.0
margin_bottom = 212.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 84.0
margin_top = 20.0
margin_right = 192.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Sound"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 196.0
margin_right = 312.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="sfx_setting" type="Button" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 316.0
margin_right = 396.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer2/sfx_setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 400.0
margin_right = 480.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
visible = false
margin_top = 216.0
margin_right = 480.0
margin_bottom = 299.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_right = 80.0
margin_bottom = 83.0
rect_min_size = Vector2( 80, 0 )

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 84.0
margin_right = 279.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
text = "Orientation
Potrait"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 283.0
margin_right = 312.0
margin_bottom = 83.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="orientation_setting" type="Button" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 316.0
margin_right = 396.0
margin_bottom = 83.0
rect_min_size = Vector2( 80, 80 )
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer4/orientation_setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 400.0
margin_right = 480.0
margin_bottom = 83.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer9" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 216.0
margin_right = 480.0
margin_bottom = 241.0
rect_min_size = Vector2( 80, 20 )
size_flags_vertical = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 245.0
margin_right = 480.0
margin_bottom = 328.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer5"]
margin_right = 80.0
margin_bottom = 83.0
rect_min_size = Vector2( 80, 0 )

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer5"]
margin_left = 84.0
margin_right = 234.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
text = "Dynamic
Joystick"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer5"]
margin_left = 238.0
margin_right = 312.0
margin_bottom = 83.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="dynamic_joystic_setting" type="Button" parent="VBoxContainer2/HBoxContainer5"]
margin_left = 316.0
margin_right = 396.0
margin_bottom = 83.0
rect_min_size = Vector2( 80, 80 )
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer5/dynamic_joystic_setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer5"]
margin_left = 400.0
margin_right = 480.0
margin_bottom = 83.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 332.0
margin_right = 480.0
margin_bottom = 412.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 416.0
margin_right = 480.0
margin_bottom = 496.0
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 56.0
margin_right = 136.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="close" parent="VBoxContainer2/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 140.0
margin_right = 340.0
margin_bottom = 80.0
button_label = "Close"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 344.0
margin_right = 424.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 500.0
margin_right = 480.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/sfx_setting" to="." method="_on_sfx_setting_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer4/orientation_setting" to="." method="_on_orientation_setting_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer5/dynamic_joystic_setting" to="." method="_on_dynamic_joystic_setting_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/close" to="." method="_on_close_pressed"]
